--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test",
+    "test": "npx hardhat test --network hardhat",
+    "test:coverage": "npx hardhat coverage --network hardhat",
     "lint:fix": "eslint \"./**/*.ts\" --fix",
     "deploy": "npx hardhat run scripts/deploy.ts",
     "donate": "npx hardhat donate",
