--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "crypton",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Crypton test",
   "scripts": {
     "test": "npx hardhat test --network hardhat",
     "test:coverage": "npx hardhat coverage --network hardhat",
@@ -14,7 +13,7 @@
     "getDonationsSum": "npx hardhat getDonationsSum",
     "withdraw": "npx hardhat withdraw"
   },
-  "author": "",
+  "author": "Radmir Dayanov",
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
